* 0.12.0 (2020-08-XX)

  * (grid) add: .max(22|26|66|68)
  * (spacing) added paddings of 1.25rem, 1.5rem, and 2.5rem
  * drop support for IE and dead browser versions

* 0.11.1 (2020-05-26)

  * (grid) add: .max(28)
  * (grid) add: .minvh
  * (normalize) depreciate: body min-height
  * (background) add: .bg-transparent
  * (reset) drop -reset.css in favor of reset-css package
  * split into base, utils, modules, debug
  * (copy) first alpha of copy module

* 0.10.0 (2020-04-15)

  * (type) add: .d[1-5]
  * (position) init: .position, .(left|right|top|bottom), .z([0-3]|9{1,4})
  * (grid) add: .min(8|10|12|14|16|18|20|24)
  * (grid) add: .max(34|35|38|42|44|51|52|54|55|78)
  * (grid) add: .max(w|h) { max-(width|height): 100% }
  * (grid) add: .xl-max
  * (border) add: .br[4-8]
  * (normalize) remove SVG fill

* 0.9.0 (2020-02-20)

  * rename: links to cursor
  * rename: borders to border
  * rename: colors to color
  * remove: depreciated styles
  * build with abrusco cli 0.5.0, add browserlist

* 0.8.2 (2019-12-21)

  * (grid) update: reorder paddings
  * (grid) add: .p[tblr](0|075)
  * (visibility) fix: opacity:0

* 0.8.1 (2019-12-07)

  * (type) update: code-font-family, lh2
  * (grid) add: max(15|65)

* 0.8.0 (2019-11-23)

  * (background) add: bg-topleft, bg-topright, bg-bottomleft, bg-bottomright, bg-repeatx, bg-repeaty, bg-norepeat
  * (background) depreciate: bg-tl, bg-tr, bg-bl, bg-br, bg-rx, bg-ry, bg-nr
  * (colors) add: color-inherit, color-inherit:hover, color-transparent
  * (variables) add: @custom-media --view-xl
  * (images) depreciate: image
  * (visibility) depreciate: invisible in favor of hidden
  * (visibility) depreciate: a0-100 in favor of o0-100
  * (visibility) move display: block, none to grid
  * (spacing) add: p[xy]?0125-1b, padding - border-width
  * (spacing) add: view-xl media query
  * (links) remove: all a- classes
  * (type) depreciate: st class in favor of lt
  * (type) add: ul:hover class
  * (type) responsive text-align